--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
-    <style>
-        div{
-            background-color: tomato;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="Styles/blog.css">
+    
 </head>
 <body>
     <div>
