added a list to push code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
         <h3>my first Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat officia temporibus neque doloremque facilis magni saepe eligendi autem maiores cumque unde tenetur ab, voluptatum quisquam obcaecati. Delectus animi illo minus!</p>
     </div>
+    <div>
+        <h3>my second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat officia temporibus neque doloremque facilis magni saepe eligendi autem maiores cumque unde tenetur ab, voluptatum quisquam obcaecati. Delectus animi illo minus!</p>
+    </div>
+    <div>
+        <h3>my third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat officia temporibus neque doloremque facilis magni saepe eligendi autem maiores cumque unde tenetur ab, voluptatum quisquam obcaecati. Delectus animi illo minus!</p>
+    </div>
+    <div>
+    <h3>you to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"Add a meaningful commit message"</li>
+        <li>git push</li>
+</div>
+        
+
+    </ul>
 
     
 </body>
