--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <li>git commit -m"Add a meaningful commit message"</li>
         <li>git push</li>
 </div>
+<div>
+    <h3>kim kim</h3>
+    <img src="image/thomas-evans-OkCc9YXayI4-unsplash.jpg" alt="">
+</div>
         
 
     </ul>
